--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 !cuda/
 !Cargo.toml
 !xypher.code-workspace
+!README.md
 
 # Ignore target, build artifacts, logs, and temp files
 /target/
@@ -37,6 +38,7 @@
 # Ignore XTRA except for source
 !/XTRA/
 !/XTRA/*.rs
+XTRA/
 
 # Ignore TASKS except for source
 !/TASKS/
